--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,22 +2,21 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: restaurants-finder-ingress
-  namespace: default
+  namespace: restaurant-finder
   annotations:
-    kubernetes.io/ingress.class: "alb"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/load-balancer-name: "restaurants-finder-alb"
-    alb.ingress.kubernetes.io/group.name: "restaurants-ingress-group"
 spec:
+  ingressClassName: "alb"
   rules:
-    - http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: restaurants-finder
-                port:
-                  number: 80
+  - host: your-domain.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: restaurants-api
+            port:
+              number: 8080
