--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: admin-secret
-  namespace: default
+  namespace: restaurant-finder
 type: Opaque
-data:
-  ADMIN_PASSWORD: <base64-encoded-password>
-  
+stringData:
+  ADMIN_PASSWORD: admin
