--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: restaurants-finder
-  namespace: default
+  namespace: restaurant-finder
 spec:
   replicas: 2
   selector:
