--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: restaurants-finder-sa
-  namespace: default
+  namespace: restaurant-finder
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::314146301965:role/restuarants-finder-eks-cluster
