--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: restaurants-finder
-  namespace: default
+  namespace: restaurant-finder
 spec:
   selector:
     app: restaurants-finder
