--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,7 +13,10 @@ FROM debian:bookworm-slim
 WORKDIR /app
 
 # Install necessary runtime dependencies
-RUN apt-get update && apt-get install -y libc6 && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y \
+    libc6 \
+    ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/server /app/server
 
