--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,13 +12,13 @@ FROM debian:bookworm-slim
 
 WORKDIR /app
 
-# Install necessary runtime dependencies
 RUN apt-get update && apt-get install -y \
     libc6 \
     ca-certificates && \
     rm -rf /var/lib/apt/lists/*
 
 COPY --from=builder /app/server /app/server
+COPY --from=builder /app/data /app/data
 
 EXPOSE 8080
 
