--- a/k8s/service-account.yaml
+++ b/k8s/service-account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: restaurants-finder-sa
+  name: restaurant-finder-sa
   namespace: restaurant-finder
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::314146301965:role/restuarants-finder-eks-cluster
+    eks.amazonaws.com/role-arn: arn:aws:iam::314146301965:role/restaurants-finder-eks-cluster-irsa
