--- a/.github/workflows/deploy-to-k8s.yaml
+++ b/.github/workflows/deploy-to-k8s.yaml
@@ -34,7 +34,7 @@ jobs:
       env:
         AWS_REGION: ${{ secrets.AWS_REGION }}
       run: |
-        aws eks update-kubeconfig --region $AWS_REGION --name infra/main.tf
+        aws eks update-kubeconfig --region $AWS_REGION --name retaurant-finder-cluster
     
     - name: Update Kubernetes Secret
       run: |
