--- a/.github/workflows/build-and-push-ecr.yaml
+++ b/.github/workflows/build-and-push-ecr.yaml
@@ -11,11 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout Code
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # Step 2: Set up AWS credentials
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
@@ -23,21 +21,18 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    # Step 3: Log in to Amazon ECR
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    # Step 4: Build Docker Image
     - name: Build Docker Image
       run: |
         IMAGE_TAG=${{ github.sha }}
-        IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
+        IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ ECR_REPOSITORY }}:$IMAGE_TAG
         docker build -t $IMAGE_URI ./server
 
-    # Step 5: Push Image to ECR
     - name: Push Docker Image
       run: |
         IMAGE_TAG=${{ github.sha }}
-        IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ vars.ECR_REPOSITORY }}:$IMAGE_TAG
+        IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ ECR_REPOSITORY }}:$IMAGE_TAG
         docker push $IMAGE_URI
