--- a/k8s/templates/deployment.yaml
+++ b/k8s/templates/deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: restaurants-finder
-  namespace: restaurant-finder
+  name: {{ .Release.Name }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  replicas: 2
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: restaurants-finder
+      app: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: restaurants-finder
+        app: {{ .Release.Name }}
     spec:
-      serviceAccountName: restaurant-finder-sa
+      serviceAccountName: {{ .Values.serviceAccountName }}
       containers:
-      - name: restaurants-finder
-        image: 314146301965.dkr.ecr.us-east-1.amazonaws.com/restaurant-finder:latest
+      - name: {{ .Release.Name }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         ports:
         - containerPort: 8080
         env:
         - name: ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: admin-secret
-              key: ADMIN_PASSWORD
+              name: {{ .Values.secrets.admin.name }}
+              key: {{ .Values.secrets.admin.key }}
         - name: TABLE_NAME
-          value: "restaurants"
+          value: {{ .Values.tableName }}
         - name: AWS_REGION
-          value: "us-east-1"
+          value: {{ .Values.awsRegion }}
         readinessProbe:
           httpGet:
             path: /healthz
