--- a/k8s/templates/service-account.yaml
+++ b/k8s/templates/service-account.yaml
@@ -5,3 +5,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
   annotations:
     eks.amazonaws.com/role-arn: {{ .Values.serviceAccount.roleArn }}
+    helm.sh/resource-policy: keep
